Avance limpieza de datos

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aeaa9873-3bd8-4a40-a30a-6cc7a0f080ff",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "559d4580",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
     "limite_inferior = Q1 - 1.5 * IQR\n",
     "limite_superior = Q3 + 1.5 * IQR\n",
     "print(limite_inferior, limite_superior)\n",
-    "outliers = df[(df[\"bmi\"] < limite_inferior)  (df[\"bmi\"] > limite_superior)]\n",
+    "outliers = df[(df[\"bmi\"] < limite_inferior) & (df[\"bmi\"] > limite_superior)]\n",
     "print(outliers)"
    ]
   },
